--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,52 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sprawdź Tłumaczenie</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-<div clss="main-container">
+<div class="main-container">
+    <div class="section">
+        <button onclick="window.location.href='users.html'" id="login-btn"><i class="fas fa-sign-in-alt"></i> Zaloguj</button>
+        <button onclick="window.location.href='registry.html'" id="registry-btn"><i class="fas fa-user-plus"></i> Zarejestruj</button>
+        <button onclick="window.location.href='repeat.html'" id="repeat-btn"><i class="fas fa-redo"></i> Powtórki</button>
+        <button onclick="window.location.href='index.html'" id="index-btn"><i class="fas fa-book"></i> Nowe Słowa</button>
+        <span>Zalogowany użytkownik: <strong id="username">Gość</strong></span>
+    </div>
 
+    <div class="section">
+        <h1>Sprawdź Tłumaczenie</h1>
+        <p>Użyj przycisku "Następne słowo" aby wylosować nowe słowo i sprawdzić jego tłumaczenie.</p>
+        <p>Użyj przycisku "Sprawdź" aby sprawdzić swoje wyniki.</p>
+        <p>Zostaniesz poinformowany o sukcesie lub porażce.</p>
+        <p>Kliknij na przycisk "Następne słowo" aby zacząć.</p>
+        <br>
+        <div id="score"></div>
+        <div id="percentage"></div>
+        <div id="error-message"></div>
+        <br>
+        <div id="polish-word"></div>
+    </div>
 
-<div class="section">
-    <button onclick="window.location.href='users.html'" id="login-btn">Zaloguj</button>
-    <button onclick="window.location.href='registry.html'"  id="registry-btn">Zarejestruj</button>
-    <button onclick="window.location.href='repeat.html'"  id="repeat-btn">Powtórki</button>
-    <button onclick="window.location.href='index.html'"  id="index-btn">Nowe Słowa</button>
-
-    <span>Zalogowany użytkownik: <strong id="username">Gość</strong></span>
+    <div class="section">
+        <div id="random-polish-word"></div>
+        <input type="text" id="english-word" placeholder="Wpisz tłumaczenie">
+        <button id="submit-btn"><i class="fas fa-check"></i> Sprawdź</button>
+        <button id="next-word-btn"><i class="fas fa-arrow-right"></i> Następne słowo</button>
+        <div id="result"></div>
+        <br>
+        <div id="translation"></div>
+        <div>Angielski opis słowa:</div>
+        <br>
+        <div id="sentenceA1"></div>
+        <br>
+        <div id="sentenceHigher"></div>
+    </div>
 </div>
-
-<div class="section">
-    <h1>Sprawdź Tłumaczenie</h1>
-    <p>Użyj przycisku "Następne słowo" aby wylosować nowe słowo i sprawdzić jego tłumaczenie.</p>
-    <p>Użyj przycisku "Sprawdź" aby sprawdzić swoje wyniki.</p>
-    <p>Zostaniesz poinformowany o sukcesie lub porażce.</p>
-    <p>Kliknij na przycisk "Następne słowo" aby zacząć.</p>
-    <br>
-    <div id="score"></div>
-    <div id="percentage"></div>
-    <div id="error-message"></div>
-    <br>
-    <div id="polish-word"></div>
-</div>
-<div class="container, section">
-    <div id="random-polish-word"></div>
-    <input type="text" id="english-word" placeholder="Wpisz tłumaczenie">
-    <button id="submit-btn">Sprawdź</button>
-    <button id="next-word-btn">Następne słowo</button>
-    <div id="result"></div>
-    <br>
-    <div id="translation"></div>
-    <div>Angielski opis słowa: </div>
-    <br>
-    <div id="sentenceA1"></div>
-    <br>
-    <div id="sentenceHigher"></div>
-
-</div>
-</div>
-
-
-
 <script src="script.js"></script>
 </body>
 </html>
