--- a/src/main/resources/static/repeat.html
+++ b/src/main/resources/static/repeat.html
@@ -3,44 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sprawdź Tłumaczenie</title>
+    <title>Powtórki</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-<div clss="main-container">
-
-
+<div class="main-container">
     <div class="section">
-        <button onclick="window.location.href='users.html'" id="login-btn">Zaloguj</button>
-        <button onclick="window.location.href='registry.html'"  id="registry-btn">Zarejestruj</button>
-        <button onclick="window.location.href='repeat.html'"  id="repeat-btn">Powtórki</button>
-        <button onclick="window.location.href='index.html'"  id="index-btn">Nowe Słowa</button>
-
+        <button onclick="window.location.href='users.html'" id="login-btn"><i class="fas fa-sign-in-alt"></i> Zaloguj</button>
+        <button onclick="window.location.href='registry.html'" id="registry-btn"><i class="fas fa-user-plus"></i> Zarejestruj</button>
+        <button onclick="window.location.href='repeat.html'" id="repeat-btn"><i class="fas fa-redo"></i> Powtórki</button>
+        <button onclick="window.location.href='index.html'" id="index-btn"><i class="fas fa-book"></i> Nowe Słowa</button>
         <span>Zalogowany użytkownik: <strong id="username">Gość</strong></span>
     </div>
 
-    <div class="section" id="infoSection">
-
-    </div>
-    <div class="container, section" id="containerRepeat">
+    <div class="section">
         <div id="repeated-polish-word"></div>
         <input type="text" id="repeated-english-word" placeholder="Wpisz tłumaczenie">
-        <button id="submit-btn">Sprawdź</button>
-        <button id="next-word-btn">Następne słowo</button>
+        <button id="submit-btn"><i class="fas fa-check"></i> Sprawdź</button>
+        <button id="next-word-btn"><i class="fas fa-arrow-right"></i> Następne słowo</button>
         <div id="result"></div>
         <br>
         <div id="translation"></div>
-        <div>Angielski opis słowa: </div>
+        <div>Angielski opis słowa:</div>
         <br>
         <div id="sentenceA1"></div>
         <br>
         <div id="sentenceHigher"></div>
-
     </div>
 </div>
-
-
-
 <script src="RepeatScript.js"></script>
 </body>
 </html>
