--- a/src/main/resources/static/users.html
+++ b/src/main/resources/static/users.html
@@ -3,26 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log in</title>
+    <title>Zaloguj</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-<div class="section">
-    <button onclick="window.location.href='index.html'" id="index-btn">Powrót</button>
-    <button onclick="window.location.href='registry.html'"  id="registry-btn">Zarejestruj</button>
-</div>
-<div class="section">
-    <div class="container">
-        <h1>Log in</h1>
-        <form action="/auth/login" method="post"> <!-- Zmieniamy formularz na POST do /auth/login -->
+<div class="main-container">
+    <div class="section">
+        <button onclick="window.location.href='users.html'" id="login-btn"><i class="fas fa-sign-in-alt"></i> Zaloguj</button>
+        <button onclick="window.location.href='registry.html'" id="registry-btn"><i class="fas fa-user-plus"></i> Zarejestruj</button>
+        <button onclick="window.location.href='repeat.html'" id="repeat-btn"><i class="fas fa-redo"></i> Powtórki</button>
+        <button onclick="window.location.href='index.html'" id="index-btn"><i class="fas fa-book"></i> Nowe Słowa</button>
+        <span>Zalogowany użytkownik: <strong id="username">Gość</strong></span>
+    </div>
+
+    <div class="section">
+        <h1>Zaloguj</h1>
+        <form action="/auth/login" method="post">
             <label for="name">Nazwa:</label>
-            <input type="name" id="name" name="username" required> <!-- Dodajemy atrybut name -->
+            <input type="name" id="name" name="username" required>
             <label for="password">Hasło:</label>
-            <input type="password" id="password" name="password" required> <!-- Dodajemy atrybut name -->
-            <button type="submit">Zaloguj się</button>
+            <input type="password" id="password" name="password" required>
+            <button type="submit"><i class="fas fa-sign-in-alt"></i> Zaloguj się</button>
         </form>
     </div>
 </div>
-
+<script src="UsersScript.js"></script>
 </body>
 </html>
